--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
 
+/* Colors */
+:root {
+  /* Primmary */
+  --strong-cyan: hsl(172, 67%, 45%);
+
+  /* Neutral */
+  --very-dark-cyan: hsl(183, 100%, 15%);
+  --dark-grayish-cyan: hsl(186, 14%, 43%);
+  --grayish-cyan: hsl(184, 14%, 56%);
+  --light-grayish-cyan: hsl(185, 41%, 84%);
+  --very-light-grayish-cyan: hsl(189, 41%, 97%);
+  --white: hsl(0, 0%, 100%);
+}
 * {
   box-sizing: border-box;
 }
 
 body {
   font-family: 'Space Mono', monospace;
+  background-color: var(--light-grayish-cyan);
 }
