--- a/src/App.css
+++ b/src/App.css
@@ -20,4 +20,8 @@
 body {
   font-family: 'Space Mono', monospace;
   background-color: var(--light-grayish-cyan);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
