--- a/src/App.css
+++ b/src/App.css
@@ -41,9 +41,53 @@ main {
 .bill-content {
   height: 315px;
   width: 280px;
+  color: var(--dark-grayish-cyan);
+  padding: 0 1rem;
+}
+.bill-content h1 {
+  font-size: 12px;
+}
+.bill-input {
+  /* width: 100%; */
+  position: relative;
+}
+.bill {
+  font-family: 'Space Mono', monospace;
+  background-image: url('./assets/images/icon-dollar.svg');
+  background-position: left;
+  background-position-x: .5rem;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 32px;
+  padding: 1rem;
+  background-color: var(--very-light-grayish-cyan);
+  border: none;
+  border-radius: 5px;
+  color: var(--very-dark-cyan);
+  font-size: 18px;
+  text-align: right;
+}
+.bill[data-icon="dollar-sign"]::before {
+  content: "";
+  background-image: url('./assets/images/icon-dollar.svg');
+  width: 11px;
+  height: 17px;
 }
 .result-content {
   height: 315px;
   width: 280px;
   background-color: var(--very-dark-cyan);
+}
+
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
