--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,28 @@ input {
   color: var(--very-dark-cyan);
   font-size: 18px;  
 }
+.tips {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: .5rem;
+}
+.tips input {
+  width: 5rem;
+  padding-right: .5rem;
+  border-radius: 5px;
+  border: none;
+}
+.tips button {
+  background-color: var(--very-dark-cyan);
+  color: var(--white);
+  border-radius: 5px;
+  border: none;
+}
+button {
+  font-size: 18px;
+  padding: .5rem 0;
+  width: 5rem;
+}
 .result-content {
   height: 315px;
   width: 280px;
